feat: СapsLock functional , Shift functional

--- a/style.css
+++ b/style.css
@@ -4,12 +4,34 @@ textarea {
     resize: none;
 }
 
+.activeShift {
+    background-color: aqua;
+}
+
 .active {
-    color: red;
+    border: 1px solid red !important;
+    background-color: aqua;
+    border-radius: 10px;
 }
 
 .language {
     margin: 1% 50%;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                    not supported by any browser */
 }
 
 .textarea {
@@ -20,27 +42,61 @@ textarea {
 
 .key-def {
     margin: 3px;
-    padding: 10px 25px;
+    width: 53px;
+    height: 30px;
     border: 1px solid black;
     cursor: pointer;
+    align-items: center;
+    text-align: center;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                    not supported by any browser */
 }
 
 #keyboard {
-    width: 1000px;
+    width: 920px;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
 }
 
+div[data="8"] {
+    width: 110px;
+}
+
+div[data="9"] {
+    width: 93px;
+}
+
 div[data="32"] {
-    padding: 10px 132px;
+    width: 295px;
 }
 
 div[data="16"] {
-    padding: 10px 46px;
+    width: 112px;
 }
 
-div[data="220"],
+div[data="20"] {
+    width: 100px;
+}
+
+div[data="220"] {
+    width: 70px;
+}
+
 div[data="13"] {
-    padding: 10px 52px;
+    width: 124px;
 }
